--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <div class="container">
 
   <nav>
-    <a routerLink="/" class="navbar-brand">
-      <h1>Portfolio</h1>
+    <a tabindex="-1" routerLink="/" class="navbar-brand">
+      <h1>CoinLib</h1>
     </a>
   </nav>
 
@@ -11,6 +11,3 @@
 </div>
 
 <br/>
-<footer>
-  <a routerLink="/edit">Edit</a>
-</footer>
