--- a/src/app/portfolio-table/portfolio-table.component.html
+++ b/src/app/portfolio-table/portfolio-table.component.html
@@ -1,34 +1,53 @@
-<table class="table">
+<div class="container">
 
-  <thead>
-  <tr>
-    <td class="text-capitalize">
-      id
-    </td>
-    <td class="text-capitalize text-right">hodl</td>
-    <td class="text-capitalize text-right">$</td>
-    <td class="text-capitalize text-right">btc</td>
-    <td class="text-capitalize text-right">VALUE</td>
-    <td class="text-capitalize text-right">%</td>
-  </tr>
-  </thead>
-  <tbody>
-  <tr *ngFor="let coin of coins">
-    <td>
-      {{coin.id}}
-      <img src="../../assets/icons/{{coin.id}}.png"/>
-    </td>
-    <td class="text-right">{{coin.coins | number: '1.0-4'}}</td>
-    <td class="text-right">{{coin.price_usd | currency }}</td>
-    <td class="text-right">{{coin.price_btc | number: '1.2-6'}}</td>
-    <td class="text-right">{{coin.value | currency }}</td>
-    <td class="text-right">{{(coin.value / total) | percent}}</td>
-  </tr>
+  <div *ngIf="!coins" class="loading">
 
-  <tr>
-    <td colspan="6" class="text-right">
-      Total: {{total | currency}}
-    </td>
-  </tr>
-  </tbody>
-</table>
+
+    Loading...
+  </div>
+  <table *ngIf="coins" class="table table-striped">
+
+    <thead>
+    <tr>
+      <td class="text-capitalize">
+        id
+      </td>
+      <td class="text-capitalize text-right">hodl</td>
+      <td class="text-capitalize text-right">VALUE</td>
+      <td class="text-capitalize text-right">%</td>
+      <td class="text-capitalize text-right">$</td>
+      <td class="text-capitalize text-right">btc</td>
+    </tr>
+    </thead>
+    <tbody>
+    <tr *ngFor="let coin of coins">
+      <a href="{{'https://coinmarketcap.com/currencies/' + coin.id}}" target="_blank">
+        <td>
+          {{coin.id}}
+          <img src="../../assets/icons/{{coin.id}}.png"/>
+        </td>
+      </a>
+      <td class="text-right">{{coin.coins | number: '1.0-4'}}</td>
+      <td [class]="min === coin.id ? 'text-danger text-right' : max === coin.id ? 'text-success text-right' : 'text-right' "
+      >{{coin.value | currency }}</td>
+      <td class="text-right">{{(coin.value / total) | percent}}</td>
+      <td class="text-right">{{coin.price_usd | currency }}</td>
+      <td class="text-right">{{coin.price_btc | number: '1.2-6'}}</td>
+    </tr>
+
+    <tr>
+      <td colspan="6" class="text-right">
+        Total:
+        <b>{{total | currency}}</b>
+      </td>
+    </tr>
+    </tbody>
+  </table>
+
+</div>
+<footer class="container">
+
+  <div class="row flex-row">
+    <a routerLink="/edit" class="btn btn-primary">Edit</a>
+  </div>
+</footer>
