--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import "bootswatch/dist/slate/bootstrap.min.css";
+
+html {
+
+  min-width: 600px;
+}
