--- a/src/styles.css
+++ b/src/styles.css
@@ -5,3 +5,22 @@ html {
 
   min-width: 600px;
 }
+
+main {
+
+  height: 80vh;
+  margin: 50px 10px;
+}
+
+footer {
+
+  height: 20vh;
+}
+
+@media all and (max-width: 467px) {
+
+  main {
+
+    margin: 20px 10px;
+  }
+}
