--- a/src/app/edit-portfolio/edit-portfolio.component.html
+++ b/src/app/edit-portfolio/edit-portfolio.component.html
@@ -6,53 +6,55 @@
     <form (submit)="portfolioService.addCoin(coin_id.value, coin_hodl.value);
     coin_id.value = '';
     coin_hodl.value = '';
+    coin_id.focus();
 
 ">
       <label>coin</label>
-      <input #coin_id class="form-control">
+      <input #coin_id class="form-control-sm">
 
-      <label>hodl</label>
-      <input class="form-control" type="number" [min]="0" #coin_hodl>
+      
+          <label>hodl</label>
+          <input class="form-control-sm" type="number" [min]="0" #coin_hodl>
+  
 
-      <button type="submit" class="btn btn-primary">New Coin</button>
+      <button type="submit" class="btn btn-primary">Save!</button>
     </form>
 
 
     <div class="card-body">
 
-      <button (click)="editMode = !editMode"
-              class="{{editMode ? 'btn btn-success' : 'btn btn-primary'}}"
-      >
-
-        {{editMode ? 'View' : 'Edit'}}
-      </button>
 
       <table class="table table-responsive">
         <thead>
         <tr>
           <th>name</th>
-          <th>hodl</th>
+          <th class="text-right">hodl</th>
         </tr>
         </thead>
 
         <tbody>
-        <tr *ngFor="let coin of portfolioService.getCoins()">
-          <td>{{coin[0]}}</td>
-          <td ngSwitch="editMode">
+        <tr *ngFor="let coin of portfolioService.getCoins();">
+
+          <td
+
+          >{{coin[0]}}</td>
+          <td class="text-right">
             <form
-              *ngSwitchCase="true"
-              (submit)="portfolioService.editCoin(coin[0], coin[1])">
+              *ngIf="editMode"
+              (submit)="portfolioService.editCoin(coin[0], coinAge.value); editMode = false;">
               <input
-                [(ngModel)]="coin[1]"
-                type="number"
-                name="{{coin[0]}}"
-                min="0"
-                class="form-control-sm"
+                #coinAge
+                value="{{coin[1]}}"
+                class="form-control-inline"
               >
-              <button hidden type="submit"></button>
+              <button class="btn btn-sm btn-primary" type="submit">save!</button>
             </form>
+
+            <span *ngIf="!editMode"  (click)="editMode = !editMode" style="cursor: pointer;" >
+              {{coin[1] | number}}
+            </span>
           </td>
-          <td *ngSwitchDefault="false">{{coin[1] | number}}</td>
+          
           <td>
             <button class="btn btn-sm btn-danger" (click)="portfolioService.deleteCoin(coin[0])">
               Delete
