--- a/src/app/portfolio-table/portfolio-table.component.html
+++ b/src/app/portfolio-table/portfolio-table.component.html
@@ -1,5 +1,5 @@
 <main class="container">
-  <div [ngSwitch]="coins.length > 0">
+  <div [ngSwitch]="portfolioService.coins.length > 0">
 
     <div class="card">
       <div class="card-body">
@@ -25,7 +25,7 @@
           </tr>
           </thead>
           <tbody>
-          <tr *ngFor="let coin of coins ">
+          <tr *ngFor="let coin of portfolioService.coins">
             <a href="{{'https://coinmarketcap.com/currencies/' + coin.id}}" target="_blank">
               <td>
                 <img src="../../assets/icons/{{coin.id}}.png" alt=""/>
@@ -35,7 +35,7 @@
 
             <td class="text-right">{{(coin.value / total) | percent}}</td>
             <td class="text-right">{{coin.price_usd | currency }}</td>
-            <td class="text-right">{{coin.price_btc | number}}</td>
+            <td class="text-right">{{coin.price_btc | number: '1.3-6'}}</td>
             <td class="text-right">{{coin.coins | number: '1.0-4'}}</td>
             <td
               [class]="min === coin.id ? 'text-danger text-right' : max === coin.id ? 'text-success text-right' : 'text-right' "
@@ -48,14 +48,14 @@
             <td class="text-center"><b>Total:</b></td>
             <td class="text-right">
               <b>
-                {{totalBtc | number}} btc
+                {{portfolioService.totalBtc | number}} btc
               </b>
             </td>
 
             <td class="text-lg-right">
               <b>
 
-                {{total | currency}}
+                {{portfolioService.total | currency}}
               </b>
             </td>
 
