--- a/src/app/portfolio-table/portfolio-table.component.html
+++ b/src/app/portfolio-table/portfolio-table.component.html
@@ -1,76 +1,68 @@
 <main class="container">
-  <div [ngSwitch]="portfolioService.coins.length > 0">
 
-    <div class="card">
-      <div class="card-body">
+    <h2>Portfolio</h2>
+    <div [ngSwitch]="portfolioService.coins.length > 0">
+
         <div *ngSwitchDefault class="loading">
 
 
-          <h2>Loading...</h2>
+            <h2>Loading...</h2>
         </div>
 
+        <table id="portfolioTable" *ngSwitchCase="true" class="table table-striped">
 
-        <table *ngSwitchCase="true" class="table table-striped">
+            <thead>
+            <tr>
+                <td class="text-capitalize">
 
-          <thead>
-          <tr>
-            <td class="text-capitalize">
+                </td>
+                <td class="text-capitalize text-right">%</td>
+                <td class="text-capitalize text-right">$</td>
+                <td class="text-capitalize text-right">btc</td>
+                <td class="text-capitalize text-right">hodl</td>
+                <td class="text-capitalize text-right">Value</td>
+            </tr>
+            </thead>
+            <tbody>
+            <tr *ngFor="let coin of portfolioService.coins">
+                <a href="{{'https://coinmarketcap.com/currencies/' + coin.id}}" target="_blank">
+                    <td>
+                        <img src="../../assets/icons/{{coin.id}}.png" alt=""/>
+                        {{coin.id}}
+                    </td>
+                </a>
 
-            </td>
-            <td class="text-capitalize text-right">%</td>
-            <td class="text-capitalize text-right">$</td>
-            <td class="text-capitalize text-right">btc</td>
-            <td class="text-capitalize text-right">hodl</td>
-            <td class="text-capitalize text-right">Value</td>
-          </tr>
-          </thead>
-          <tbody>
-          <tr *ngFor="let coin of portfolioService.coins">
-            <a href="{{'https://coinmarketcap.com/currencies/' + coin.id}}" target="_blank">
-              <td>
-                <img src="../../assets/icons/{{coin.id}}.png" alt=""/>
-                {{coin.id}}
-              </td>
-            </a>
+                <td class="text-right">{{(coin.value / total) | percent}}</td>
+                <td class="text-right">{{coin.price_usd | currency }}</td>
+                <td class="text-right">{{coin.price_btc | number: '1.3-6'}}</td>
+                <td class="text-right">{{coin.coins | number: '1.0-4'}}</td>
+                <td
+                    [class]="min === coin.id ? 'text-danger text-right' : max === coin.id ? 'text-success text-right' : 'text-right' "
+                >{{coin.value | currency }}
+                </td>
+            </tr>
 
-            <td class="text-right">{{(coin.value / total) | percent}}</td>
-            <td class="text-right">{{coin.price_usd | currency }}</td>
-            <td class="text-right">{{coin.price_btc | number: '1.3-6'}}</td>
-            <td class="text-right">{{coin.coins | number: '1.0-4'}}</td>
-            <td
-              [class]="min === coin.id ? 'text-danger text-right' : max === coin.id ? 'text-success text-right' : 'text-right' "
-            >{{coin.value | currency }}
-            </td>
-          </tr>
+            <tr>
+                <td colspan="3"></td>
+                <td class="text-center"><b>Total:</b></td>
+                <td class="text-right">
+                    <b>
+                        {{portfolioService.totalBtc | number}} btc
+                    </b>
+                </td>
 
-          <tr>
-            <td colspan="3"></td>
-            <td class="text-center"><b>Total:</b></td>
-            <td class="text-right">
-              <b>
-                {{portfolioService.totalBtc | number}} btc
-              </b>
-            </td>
+                <td class="text-lg-right">
+                    <b>
 
-            <td class="text-lg-right">
-              <b>
+                        {{portfolioService.total | currency}}
+                    </b>
+                </td>
 
-                {{portfolioService.total | currency}}
-              </b>
-            </td>
-
-          </tr>
-          </tbody>
+            </tr>
+            </tbody>
         </table>
-      </div>
+
     </div>
-
-  </div>
 </main>
-<footer>
+<app-navigation></app-navigation>
 
-  <div class="row flex-row">
-    <a routerLink="/edit" class="btn btn-primary">Edit Coins</a>
-    <a routerLink="/graph" class="btn btn-primary">Graph</a>
-  </div>
-</footer>
