--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,9 +1,10 @@
-<footer>
+<nav>
 
     <div class="flexer">
-        <a routerLink="/edit" class="btn btn-primary">Edit Coins</a>
+        <a routerLink="/table" class="btn btn-primary">Portfolio</a>
         <a routerLink="/market" class="btn btn-primary">Market</a>
-        <a routerLink="/graph" class="btn btn-primary">Graph</a>
+        <a routerLink="/graph" class="btn btn-primary">Graphs</a>
+        <a routerLink="/edit" class="btn btn-primary">Edit Portfolio</a>
         <a (click)="csvDownloadService.handleDownload()" class="btn btn-primary">Download</a>
     </div>
-</footer>
+</nav>
