--- a/src/app/graph/graph.component.html
+++ b/src/app/graph/graph.component.html
@@ -1,29 +1,28 @@
 <main>
 
-  <div class="row">
+    <h1>{{activeParam}} Graph</h1>
+    <p>
+        <button (click)="toggleDescending()">{{descending ? 'Bottom' : 'Top'}}</button>
+    </p>
+    <div class="row">
+
+    </div>
 
     <div class="col-sm-3">
 
-      <form>
-        <label>param</label>
-        <select class="form-control-sm"
-                #activeParamInput
-                [value]="activeParam"
-                (change)="activeParam = activeParamInput.value; updateGraph();"
-        >
-          <option *ngFor="let key of keys" [value]="key">{{key}}</option>
-        </select>
-      </form>
+        <form>
+            <label>param</label>
+            <select class="form-control-sm"
+                    #activeParamInput
+                    [value]="activeParam"
+                    (change)="activeParam = activeParamInput.value; updateGraph();"
+            >
+                <option *ngFor="let key of keys" [value]="key">{{key}}</option>
+            </select>
+        </form>
     </div>
 
     <div class="col-sm-9"></div>
-  </div>
-  <div id="chart"></div>
+    <div id="chart"></div>
 
 </main>
-
-<footer>
-
-  <a routerLink="/" class="btn btn-primary">Home</a>
-
-</footer>
