--- a/src/app/market-table/market-table.component.html
+++ b/src/app/market-table/market-table.component.html
@@ -3,27 +3,46 @@
     <table class="table table-striped">
         <thead>
         <tr>
-            <th>
+            <th
+                (click)="handleNewSort('rank')"
+            >
                 name
             </th>
-            <th class="text-right">Price (USD)</th>
-            <th class="text-right">Price (BTC)</th>
-            <th class="text-right">Available Supply</th>
-            <th class="text-right">24h %</th>
-            <th class="text-right">7d %</th>
+            <th class="text-right"
+                (click)="handleNewSort('price_usd')"
+            >Price (USD)
+            </th>
+            <th class="text-right"
+                (click)="handleNewSort('price_btc')"
+            >Price (BTC)
+            </th>
+            <th class="text-right"
+                (click)="handleNewSort('available_supply')"
+            >Available Supply
+            </th>
+            <th class="text-right"
+                (click)="handleNewSort('percent_change_24h')"
+            >24h %
+            </th>
+            <th class="text-right"
+                (click)="handleNewSort('percent_change_7d')"
+            >7d %
+            </th>
 
         </tr>
         </thead>
         <tbody>
-        <tr *ngFor="let coin of coins">
+        <tr *ngFor="let coin of sortedCoins()">
             <a href="{{'https://coinmarketcap.com/currencies/' + coin.id}}" target="_blank">
                 <td>
+                    {{coin.rank}}
+                    {{' '}}
                     <img src="../../assets/icons/{{coin.id}}.png" alt=""/>
                     {{coin.id}}
                 </td>
             </a>
             <td class="text-right">{{coin.price_usd | currency}}</td>
-            <td class="text-right">{{coin.price_btc | number}}</td>
+            <td class="text-right">{{coin.price_btc | number: '1.3-6'}}</td>
             <td class="text-right">{{coin.available_supply | number: '1.0'}}</td>
             <td class="text-right">{{coin.percent_change_24h | number}}</td>
             <td class="text-right">{{coin.percent_change_7d | number }}</td>
@@ -31,4 +50,3 @@
         </tbody>
     </table>
 </main>
-<app-navigation></app-navigation>
