--- a/src/app/portfolio-table/portfolio-table.component.css
+++ b/src/app/portfolio-table/portfolio-table.component.css
@@ -1,8 +1,12 @@
 .loading {
 
-  height: 300px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 1.3rem;
+    height: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.3rem;
+}
+
+th {
+    cursor: pointer;
 }
