--- a/src/app/graph/graph.component.css
+++ b/src/app/graph/graph.component.css
@@ -1,3 +1,12 @@
-main {
-    background: #fff;
+#chart {
+
+    border-radius: 4px;
+    background: white;
 }
+
+form {
+
+    padding-right: 3%;
+}
+
+
