--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
-<div class="container">
-  <app-navigation></app-navigation>
-    <router-outlet></router-outlet>
+<div
+    class="{{cx ? 'cx' : null}}"
+>
+    <div class="container">
+        <app-navigation></app-navigation>
+        <router-outlet></router-outlet>
+    </div>
 </div>
