--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div
     class="{{cx ? 'cx' : null}}"
 >
-    <div class="container">
+    <div class="container-fluid">
         <app-navigation></app-navigation>
         <router-outlet></router-outlet>
     </div>
