--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -4,5 +4,6 @@
         <a routerLink="/table" class="btn btn-primary">Portfolio</a>
         <a routerLink="/market" class="btn btn-primary">Market</a>
         <a routerLink="/graph" class="btn btn-primary">Graphs</a>
+        <a routerLink="/pie-chart" class="btn btn-primary">Pie Chart</a>
     </div>
 </nav>
