--- a/src/app/edit-portfolio/edit-portfolio.component.html
+++ b/src/app/edit-portfolio/edit-portfolio.component.html
@@ -1,75 +1,49 @@
-<main>
-    <div class="card">
-        <h3 class="card-header">Edit Portfolio</h3>
+<table
+    id="editPortfolio"
+    class="table table-responsive table-striped table-hover">
+    <caption>Edit Portfolio</caption>
+    <thead>
+    <tr>
+        <th>name</th>
+        <th class="text-right">hodl</th>
+        <th></th>
+    </tr>
+    </thead>
 
+    <tbody>
+    <tr *ngFor="let coin of portfolioService.getCoins()">
 
-        <form (submit)="portfolioService.addCoin(coin_id.value, coin_hodl.value);
-    coin_id.value = '';
-    coin_hodl.value = '';
-    coin_id.focus();
+        <td
 
-">
-            <label>coin</label>
-            <input #coin_id class="form-control-sm">
+        >{{coin[0]}}
+        </td>
+        <td class="text-right">
+            <form
+                *ngIf="editMode"
+                (submit)="portfolioService.editCoin(coin[0], coinAge.value); editMode = false;">
+                <input
+                    #coinAge
+                    value="{{coin[1]}}"
+                    class="form-control-inline"
+                >
+                <button class="btn btn-sm btn-primary" type="submit">save!</button>
+            </form>
 
-
-            <label>hodl</label>
-            <input class="form-control-sm" type="number" [min]="0" #coin_hodl>
-
-
-            <button type="submit" class="btn btn-primary">Save!</button>
-        </form>
-
-
-        <div class="card-body">
-
-
-            <table class="table table-responsive">
-                <thead>
-                <tr>
-                    <th>name</th>
-                    <th class="text-right">hodl</th>
-                </tr>
-                </thead>
-
-                <tbody>
-                <tr *ngFor="let coin of portfolioService.getCoins()">
-
-                    <td
-
-                    >{{coin[0]}}
-                    </td>
-                    <td class="text-right">
-                        <form
-                            *ngIf="editMode"
-                            (submit)="portfolioService.editCoin(coin[0], coinAge.value); editMode = false;">
-                            <input
-                                #coinAge
-                                value="{{coin[1]}}"
-                                class="form-control-inline"
-                            >
-                            <button class="btn btn-sm btn-primary" type="submit">save!</button>
-                        </form>
-
-                        <span *ngIf="!editMode" (click)="editMode = !editMode" style="cursor: pointer;">
+            <span *ngIf="!editMode" (click)="editMode = !editMode" style="cursor: pointer;">
               {{coin[1] | number}}
             </span>
-                    </td>
+        </td>
 
-                    <td>
-                        <button class="btn btn-sm btn-danger" (click)="portfolioService.deleteCoin(coin[0])">
-                            Delete
-                        </button>
-                    </td>
+        <td>
+            <button class="btn btn-sm btn-danger" (click)="portfolioService.deleteCoin(coin[0])">
+                Delete
+            </button>
+        </td>
 
-                </tr>
-                </tbody>
-            </table>
+    </tr>
+    </tbody>
+    <tfoot>
 
-        </div>
-    </div>
+    </tfoot>
+</table>
 
-    <a
-        (click)="localStorageService.deleteCoins()"
-        class="btn btn-danger">Delete Portfolio</a>
-</main>
