--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <a class="navbar-brand" routerLink="/">Alt Folio</a>
+    <a class="navbar-brand" routerLink="/portfolio">Alt Folio</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01"
             aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -7,9 +7,8 @@
 
     <div class="collapse navbar-collapse" id="navbarColor01">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item"><a routerLink="/portfolio" class="btn btn-primary">Portfolio</a></li>
-            <li class="nav-item"><a routerLink="/market" class="btn btn-primary">Market</a></li>
-            <li class="nav-item"><a routerLink="/graph" class="btn btn-primary">Graphs</a></li>
+            <li class="nav-item"><a routerLink="/portfolio" class="btn btn-primary" routerLinkActive="btn-success">Portfolio</a></li>
+            <li class="nav-item"><a routerLink="/market" class="btn btn-primary" routerLinkActive="btn-success">Market</a></li>
         </ul>
     </div>
 </nav>
