--- a/src/app/portfolio-page/portfolio-page.component.html
+++ b/src/app/portfolio-page/portfolio-page.component.html
@@ -1,15 +1,35 @@
 <div class="container-fluid" style="margin-top: 3vh;">
-    <ul class="nav nav-pills">
-
-        <li>
-            <a routerLink="/portfolio/edit" class="btn btn-primary">Edit Portfolio</a>
-        </li>
-
-        <li>
-            <a (click)="csvDownloadService.handleDownload()" class="btn btn-primary">Download</a>
-        </li>
-
-    </ul>
     <router-outlet></router-outlet>
+
+    <nav class="navbar fixed-bottom navbar-light bg-light">
+        <ul style="display: flex; align-items: center; justify-content: center;">
+
+            <li>
+                <a routerLink="/portfolio/add" routerLinkActive="btn-success" class="btn btn-primary">Add Coin</a>
+            </li>
+            <li>
+                <a routerLink="/portfolio/edit" class="btn btn-primary" routerLinkActive="btn-success">Edit
+                    Portfolio</a>
+            </li>
+
+            <li>
+                <button class="btn btn-primary"
+
+                        (click)="csvDownloadService.handleDownload()">Download
+                </button>
+            </li>
+
+            <li>
+                <button
+                    class="btn btn-danger"
+                    (click)="localStorageService.deleteCoins()"
+
+                >Delete Portfolio
+                </button>
+            </li>
+
+        </ul>
+    </nav>
+
 
 </div>
