--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -1,12 +1,12 @@
-<nav class="navbar navbar-expand-lg bg-primary">
-    <a class="navbar-brand" routerLink="/portfolio">Alt Folio</a>
+<nav class="navbar navbar-expand-sm navbar-dark bg-primary">
+<a class="navbar-brand" routerLink="/portfolio">Alt Folio</a>
 
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01"
-            aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTop"
+          aria-controls="navbarTop" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
-    <div class="collapse navbar-collapse" id="navbarColor01">
+    <div class="collapse navbar-collapse" id="navbarTop">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item"><a routerLink="/portfolio" class="nav-link" routerLinkActive="btn-success">Portfolio</a></li>
             <li class="nav-item"><a routerLink="/market" class="nav-link" routerLinkActive="btn-success">Market</a></li>
