--- a/src/app/portfolio-page/portfolio-page.component.html
+++ b/src/app/portfolio-page/portfolio-page.component.html
@@ -15,33 +15,21 @@
   </ul>
   <router-outlet></router-outlet>
 
-  <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-bottom">
+  <nav class="navbar navbar-dark bg-primary fixed-bottom">
 
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#bottomNavContent"
-            aria-controls="bottomNavContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+    <div class="btn-group">
+      <button
+        class="btn"
 
-    <div class="collapse navbar-collapse" id="bottomNavContent">
-      <ul class="navbar-nav mr-auto" style="display: flex; align-items: center; justify-content: center;">
-        <li class="nav-item">
-          <button
-            class="nav-link"
+        (click)="csvDownloadService.handleDownload()">Download
+      </button>
 
-            (click)="csvDownloadService.handleDownload()">Download
-          </button>
-        </li>
+      <button
+        class="btn btn-danger"
+        (click)="localStorageService.deleteCoins()"
 
-        <li class="nav-item">
-          <button
-            class="nav-link btn btn-danger"
-            (click)="localStorageService.deleteCoins()"
-
-          >Delete Portfolio
-          </button>
-        </li>
-
-      </ul>
+      >Delete Portfolio
+      </button>
     </div>
   </nav>
 
