--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -7,9 +7,9 @@
   </button>
 
     <div class="collapse navbar-collapse" id="navbarTop">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item"><a routerLink="/portfolio" class="nav-link" routerLinkActive="btn-success">Portfolio</a></li>
-            <li class="nav-item"><a routerLink="/market" class="nav-link" routerLinkActive="btn-success">Market</a></li>
+        <ul class="nav">
+            <li class="nav-item"><a routerLink="/portfolio" class="nav-link" routerLinkActive="active">Portfolio</a></li>
+            <li class="nav-item"><a routerLink="/market" class="nav-link" routerLinkActive="active">Market</a></li>
         </ul>
     </div>
 </nav>
